--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.esquekenya.flutter_mpesa_sms">
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
    <application
         android:label="flutter_mpesa_sms"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-        <activity
+
+
+       <receiver android:name="com.shounakmulay.telephony.sms.IncomingSmsReceiver"
+           android:permission="android.permission.BROADCAST_SMS" android:exported="true">
+           <intent-filter>
+               <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+           </intent-filter>
+       </receiver>
+
+       <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
