--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  telephony: ^0.1.4
+  sqflite: ^2.0.0+3
+  path: any
+  provider: ^6.0.2
+  path_provider: ^2.0.9
+  flutter_background_service: ^0.2.4
 
 dev_dependencies:
   flutter_test:
